--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
       <version>1.3.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
+
     <!-- Lombok -->
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -143,7 +149,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+
   </dependencies>
+
+
 
   <!-- 여기까지 복사 -->
   <build>
